<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncluirFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4C4C4"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#575757"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:title="Adicionar uma tarefa" />


        <EditText
            android:id="@+id/textNome"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/nome_da_tarefa"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.702"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialToolbar" />

        <EditText
            android:id="@+id/textData"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/data_para_a_conclusao"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textHora"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResp" />

        <EditText
            android:id="@+id/textHora"
            android:layout_width="109dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/hora"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResp" />

        <EditText
            android:id="@+id/textResp"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/responsavel"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.702"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNome" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/icone_de_pessoa"
            app:layout_constraintEnd_toStartOf="@+id/textResp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/icone_de_tarefa"
            app:layout_constraintEnd_toStartOf="@+id/textNome"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
            app:srcCompat="@drawable/ic_baseline_list_alt_24" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icone_de_relogio"
            app:layout_constraintEnd_toStartOf="@+id/textData"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="#ABDD85"
            android:text="@string/salvar"
            android:textColor="#000000"
            app:cornerRadius="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDesc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textDesc"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textData">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDescBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descreva_a_tarefa"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>